--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.1.5",
+		"@internationalized/date": "^3.5.5",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/checkbox": "^2.1.4",
 		"@nextui-org/code": "2.0.32",
+		"@nextui-org/date-picker": "^2.1.6",
 		"@nextui-org/input": "2.2.4",
 		"@nextui-org/kbd": "2.0.33",
 		"@nextui-org/link": "2.0.34",
