--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@heroicons/react": "^2.1.5",
 		"@internationalized/date": "^3.5.5",
 		"@nextui-org/button": "2.0.37",
+		"@nextui-org/card": "^2.0.33",
 		"@nextui-org/checkbox": "^2.1.4",
 		"@nextui-org/code": "2.0.32",
 		"@nextui-org/date-picker": "^2.1.6",
